tests/baselines/reference/parserErrorRecovery_ObjectLiteral3.errors.txt
parserErrorRecovery_ObjectLiteral3.ts(2,1): error TS1109: Expression expected.
parserErrorRecovery_ObjectLiteral3.ts(2,7): error TS1005: ':' expected.
parserErrorRecovery_ObjectLiteral3.ts(2,8): error TS1005: '}' expected.


==== parserErrorRecovery_ObjectLiteral3.ts (3 errors) ====
    var v = { a: 
    return;
    ~~~~~~
!!! error TS1109: Expression expected.
          ~
!!! error TS1005: ':' expected.
           
!!! error TS1005: '}' expected.
!!! related TS1007 parserErrorRecovery_ObjectLiteral3.ts:1:9: The parser expected to find a '}' to match the '{' token here.